Fix databar jumping
dataBar items would jump around when navigating between events dues to automatic spacing and different string lengths.  This locks them in place and should allow for most reasonable event sizes.

--- a/web/skins/classic/css/classic/views/event.css
+++ b/web/skins/classic/css/classic/views/event.css
@@ -35,6 +35,7 @@ span.noneCue {
 
 #dataBar #dataTable {
     width: 100%;
+    table-layout: fixed;
 }
 
 #dataBar #dataTable td {
