--- a/web/skins/classic/css/dark/views/event.css
+++ b/web/skins/classic/css/dark/views/event.css
@@ -39,6 +39,7 @@ span.noneCue {
 
 #dataBar #dataTable {
     width: 100%;
+    table-layout: fixed;
 }
 
 #dataBar #dataTable td {
